Corriger l'utilisation de Collectors